--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "amio-sdk-js": "^1.6.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsdom": "^11.11.0",
